[gd_scene load_steps=3 format=3 uid="uid://dx8v3qm2np5zt"]

[ext_resource type="Script" path="res://scenes/weapons/rusty_sword.gd" id="1_sword"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sweep"]
radius = 60.0

[node name="RustySword" type="Node2D"]
script = ExtResource("1_sword")

[node name="SweepArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SweepArea"]
position = Vector2(40, 0)
shape = SubResource("CircleShape2D_sweep")

[node name="SweepVisual" type="Node2D" parent="."]

[node name="SwordSprite" type="Polygon2D" parent="SweepVisual"]
color = Color(0.7, 0.7, 0.8, 0.8)
polygon = PackedVector2Array(0, -8, 70, -4, 80, 0, 70, 4, 0, 8)

[node name="ArcEffect" type="Polygon2D" parent="SweepVisual"]
color = Color(1, 1, 1, 0.3)
polygon = PackedVector2Array(0, 0, 60, -35, 70, -20, 75, 0, 70, 20, 60, 35)
